--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "A VS Code extension that allows you to highlight trailing spaces and delete them in a flash!",
     "version": "0.1.0",
     "publisher": "shardulm94",
+    "icon": "./icon.png",
     "engines": {
         "vscode": "^0.10.1"
     },
