--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "trailing-spaces",
     "displayName": "Trailing Spaces",
-    "description": "A VS Code extension that allows you to highlight trailing spaces and delete them in a flash!",
+    "description": "Highlight trailing spaces and delete them in a flash!",
     "version": "0.1.1",
     "publisher": "shardulm94",
     "icon": "icon.png",
