--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "trailing-spaces",
     "displayName": "Trailing Spaces",
     "description": "Highlight trailing spaces and delete them in a flash!",
-    "version": "0.2.2",
+    "version": "0.2.3",
     "publisher": "shardulm94",
     "icon": "icon.png",
     "engines": {
@@ -32,12 +32,12 @@
                 "trailing-spaces.includeEmptyLines": {
                     "type": "boolean",
                     "default": true,
-                    "description": "By default, empty lines are cleared as well when calling the deletion command.\nSet to false to ignore empty lines upon deletion."
+                    "description": "By default, empty lines are cleared as well when calling the deletion command. Set to false to ignore empty lines upon deletion."
                 },
                 "trailing-spaces.includeCurrentLine": {
                     "type": "boolean",
                     "default": true,
-                    "description": "By default, the line being currently edited will have its trailing spaces highlighted.\nSet to false to ignore trailing spaces on the edited line."
+                    "description": "By default, the line being currently edited will have its trailing spaces highlighted. Set to false to ignore trailing spaces on the edited line."
                 },
                 "trailing-spaces.regexp": {
                     "type": "string",
@@ -47,27 +47,27 @@
                 "trailing-spaces.liveMatching": {
                     "type": "boolean",
                     "default": true,
-                    "description": "By default, Trailing Spaces is \"live\". It means the trailing spaces regions will be matched in the background, and highlighted if a color scope is defined, when the document is opened and edited.\nSet to false to disable live matching and highlighting (the deletion command remains available, so-called \"lazy matching\")."
+                    "description": "By default, Trailing Spaces is \"live\". It means the trailing spaces regions will be matched in the background, and highlighted if a color scope is defined, when the document is opened and edited. Set to false to disable live matching and highlighting (the deletion command remains available, so-called \"lazy matching\")."
                 },
                 "trailing-spaces.modifiedLinesOnly": {
                     "type": "boolean",
                     "default": false,
-                    "description": "By default, trailing spaces are deleted within the whole document.\nSet to true to affect only the lines you edited since last save.\nTrailing spaces will still be searched for and highlighted in the whole document."
+                    "description": "By default, trailing spaces are deleted within the whole document.\nSet to true to affect only the lines you edited since last save. Trailing spaces will still be searched for and highlighted in the whole document."
                 },
                 "trailing-spaces.syntaxIgnore": {
                     "type": "array",
                     "default": [],
-                    "description": "With this option you can ignore specific files based on the syntax used. An item has to match a case-sensitive substring of the syntax used in the file."
+                    "description": "With this option you can ignore specific files based on the syntax used. An item has to match the case-sensitive string of the language used in the file."
                 },
                 "trailing-spaces.trimOnSave": {
                     "type": "boolean",
                     "default": false,
-                    "description": "By default, nothing happens on save.\nSet to true to trim trailing spaces before saving, with respect to the other settings."
+                    "description": "By default, nothing happens on save. Set to true to trim trailing spaces before saving, with respect to the other settings."
                 },
                 "trailing-spaces.saveAfterTrim": {
                     "type": "boolean",
                     "default": false,
-                    "description": "By default, deleting trailing spaces does not cause the document to be saved.\nSet to true to force saving after trailing spaces have been deleted.\nThis setting is irrelevant and will be ignored if trimOnSave is true."
+                    "description": "By default, deleting trailing spaces does not cause the document to be saved. Set to true to force saving after trailing spaces have been deleted. This setting is irrelevant and will be ignored if trimOnSave is true."
                 }
             }
         },
