Add basic testing mechanism

--- a/package.json
+++ b/package.json
@@ -91,9 +91,11 @@
     ],
     "scripts": {
         "vscode:prepublish": "node ./node_modules/vscode/bin/compile",
-        "compile": "node ./node_modules/vscode/bin/compile -watch -p ./"
+        "compile": "node ./node_modules/vscode/bin/compile -watch -p ./",
+        "precompile": "ncp test/files out/test/files"
     },
     "devDependencies": {
+        "ncp": "^2.0.0",
         "typescript": "^1.6.2",
         "vscode": "0.10.x"
     },
