--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "trailing-spaces",
     "displayName": "Trailing Spaces",
     "description": "Highlight trailing spaces and delete them in a flash!",
-    "version": "0.2.4",
+    "version": "0.2.5",
     "publisher": "shardulm94",
     "icon": "icon.png",
     "engines": {
@@ -34,7 +34,7 @@
                     "default": true,
                     "description": "By default, empty lines are cleared as well when calling the deletion command. Set to false to ignore empty lines upon deletion."
                 },
-                "trailing-spaces.includeCurrentLine": {
+                "trailing-spaces.highlightCurrentLine": {
                     "type": "boolean",
                     "default": true,
                     "description": "By default, the line being currently edited will have its trailing spaces highlighted. Set to false to ignore trailing spaces on the edited line."
@@ -49,7 +49,7 @@
                     "default": true,
                     "description": "By default, Trailing Spaces is \"live\". It means the trailing spaces regions will be matched in the background, and highlighted if a color scope is defined, when the document is opened and edited. Set to false to disable live matching and highlighting (the deletion command remains available, so-called \"lazy matching\")."
                 },
-                "trailing-spaces.modifiedLinesOnly": {
+                "trailing-spaces.deleteModifiedLinesOnly": {
                     "type": "boolean",
                     "default": false,
                     "description": "By default, trailing spaces are deleted within the whole document. Set to true to affect only the lines you edited since last save. Trailing spaces will still be searched for and highlighted in the whole document."
