--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
         "category": "Trailing Spaces"
       },
       {
-        "command": "trailing-spaces.deleteInFolderLeaf",
+        "command": "trailing-spaces.deleteInFolder",
         "title": "Delete in Folder",
         "category": "Trailing Spaces"
       },
