--- a/package.json
+++ b/package.json
@@ -101,18 +101,19 @@
     "vscode:prepublish": "node ./node_modules/vscode/bin/compile",
     "compile": "node ./node_modules/vscode/bin/compile -watch -p ./",
     "test": "node ./node_modules/vscode/bin/test",
-    "pretest": "ncp test/files out/test/files"
+    "pretest": "ncp test/files out/test/files",
+    "postinstall": "node ./node_modules/vscode/bin/install"
   },
   "devDependencies": {
     "ncp": "^2.0.0",
     "typescript": "^1.6.2",
-    "vscode": "0.10.x"
+    "vscode": "^0.11.x"
   },
   "directories": {
     "test": "test"
   },
   "dependencies": {
-    "diff": "^2.2.1",
+    "diff": "^3.0.0",
     "glob": "^7.0.3"
   },
   "repository": {
