--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "trailing-spaces",
   "displayName": "Trailing Spaces",
   "description": "Highlight trailing spaces and delete them in a flash!",
-  "version": "0.2.11",
+  "version": "0.3.0-rc2",
   "publisher": "shardulm94",
   "icon": "icon.png",
   "engines": {
@@ -108,13 +108,13 @@
     "mocha": "^5.0.0",
     "@types/node": "^6.0.40",
     "@types/mocha": "^5.0.0",
-    "ncp": "^2.0.0"
+    "ncp": "^2.0.0",
+    "@types/diff": "^4.0.0"
   },
   "directories": {
     "test": "test"
   },
   "dependencies": {
-    "@types/diff": "^4.0.0",
     "diff": "^4.0.0"
   },
   "repository": {
