support extensionKind ui and workspace

--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   "engines": {
     "vscode": "^1.6.0"
   },
+  "extensionKind": [
+    "ui",
+    "workspace"
+  ],
   "categories": [
     "Other"
   ],
