--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,25 +1,20 @@
-// Available variables which can be used inside of strings.
-// ${workspaceRoot}: the root folder of the team
-// ${file}: the current opened file
-// ${fileBasename}: the current opened file's basename
-// ${fileDirname}: the current opened file's dirname
-// ${fileExtname}: the current opened file's extension
-// ${cwd}: the current working directory of the spawned process
-
-// A task runner that calls a custom npm script that compiles the extension.
+// See https://go.microsoft.com/fwlink/?LinkId=733558
+// for the documentation about the tasks.json format
 {
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "npm",
-            "type": "shell",
-            "command": "npm",
+            "type": "npm",
+            "script": "watch",
+            "problemMatcher": "$tsc-watch",
+            "isBackground": true,
             "presentation": {
                 "reveal": "never"
             },
-            "args": ["run", "compile", "--loglevel", "silent"],
-            "isBackground": true,
-            "problemMatcher": "$tsc-watch"
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
         }
     ]
 }
