--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
         "@types/glob": "^7.2.0",
         "@types/mocha": "^9.1.1",
         "@types/node": "16.x",
+        "@types/diff": "^5.0.2",
         "@typescript-eslint/eslint-plugin": "^5.30.0",
         "@typescript-eslint/parser": "^5.30.0",
         "eslint": "^8.18.0",
@@ -137,6 +138,9 @@
         "mocha": "^10.0.0",
         "typescript": "^4.7.4",
         "@vscode/test-electron": "^2.1.5"
+    },
+    "dependencies": {
+        "diff": "^5.0.2"
     },
     "repository": {
         "type": "git",
